# clinero_coding_challenge

./: .env.example  .gitignore  README.md  UV_AGENTIC_REPORT.md  pyproject.toml
research/: 2026-03-16-plan-select-latest-file-entry.md  2026-03-18-plan-incremental-extraction.md
src/clieno_extractor/: __init__.py  config.py  extractor.py  main.py
tests/: conftest.py  test_extractor.py
